--- a/hugo.toml
+++ b/hugo.toml
@@ -73,3 +73,6 @@ imageZoomableInPost = true
 # [params.experimental]
 # jsDate = true
 # jsDateFormat = "yyyy年MM月dd日"
+[markup]
+[markup.goldmark.parser.attribute]
+block = true
