--- a/config/_default/languages.it.toml
+++ b/config/_default/languages.it.toml
@@ -1,17 +1,17 @@
 disabled = false
-languageCode = "en"
-languageName = "English"
+languageCode = "it"
+languageName = "Italian"
 weight = 1
 title = "The Radiostars"
 
 [params]
-  displayName = "EN"
-  isoCode = "en"
+  displayName = "IT"
+  isoCode = "it"
   rtl = false
-  dateFormat = "2 January 2006"
+  dateFormat = "2 Gennaio 2006"
   logo = "img/logo.png"
   # secondaryLogo = "img/secondary-logo.png"
-  # description = "My awesome website"
+   description = "My awesome website"
   # copyright = "Copy, _right?_ :thinking_face:"
 
 # [params.author]
