--- a/config/_default/menus.it.toml
+++ b/config/_default/menus.it.toml
@@ -11,12 +11,12 @@
 # ordered by weight from lowest to highest.
 
 [[main]]
-  name = "Posts"
+  name = "Blog"
   pageRef = "posts"
   weight = 10
 
 [[main]]
-  name = "Discography"
+  name = "Discografia"
   pageRef = "discog"
   weight = 9
 
