--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -43,7 +43,7 @@ forgejoDefaultServer = "https://v8.next.forgejo.org"
 
 [homepage]
   layout = "background" # valid options: page, profile, hero, card, background, custom
-  homepageImage = "img/logo.png" # used in: hero, and card
+  homepageImage = "img/radiobagos.png" # used in: hero, and card
   showRecent = false
   showRecentItems = 5
   showMoreLink = false
