--- a/config/_default/menus.it.toml
+++ b/config/_default/menus.it.toml
@@ -20,6 +20,11 @@
   pageRef = "discog/discog"
   weight = 9
 
+[[main]]
+  name = "Discografia Dev"
+  pageRef = "discog_dev/discog_dev"
+  weight = 9
+
 #[[main]]
 #  name = "Parent"
 #  weight = 20
