--- a/config/_default/languages.it.toml
+++ b/config/_default/languages.it.toml
@@ -18,8 +18,8 @@ title = "The Radiostars"
    name = "The Radiostars"
    email = "youremail@example.com"
    image = "img/logo.png"
-#   imageQuality = 96
-#   headline = "I'm only human"
+   imageQuality = 96
+   headline = "I'm only human"
    bio = "A little bit about you"
    links = [
 #     { email = "mailto:hello@your_domain.com" },
