--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -21,7 +21,8 @@ disableImageOptimization = false
 disableTextInHeader = false
 # backgroundImageWidth = 1200
 
-defaultBackgroundImage = "radiobagos.png" # used as default for background images 
+#defaultBackgroundImage = "radiobagos.png" # used as default for background images 
+defaultBackgroundImage = "background.jpg" # used as default for background images 
 # defaultFeaturedImage = "IMAGE.jpg" # used as default for featured images in all articles
 
 highlightCurrentMenuArea = true
@@ -43,7 +44,8 @@ forgejoDefaultServer = "https://v8.next.forgejo.org"
 
 [homepage]
   layout = "background" # valid options: page, profile, hero, card, background, custom
-  homepageImage = "radiobagos.png" # used in: hero, and card
+  #homepageImage = "radiobagos.png" # used in: hero, and card
+  homepageImage = "background.jpg" # used in: hero, and card
   showRecent = false
   showRecentItems = 5
   showMoreLink = false
