--- a/config/_default/languages.it.toml
+++ b/config/_default/languages.it.toml
@@ -20,7 +20,7 @@ title = "The Radiostars"
    image = "img/logo.png"
    imageQuality = 96
    headline = "I'm only human"
-   bio = "A little bit about you"
+   #bio = "A little bit about you"
    links = [
 #     { email = "mailto:hello@your_domain.com" },
 #     { link = "https://link-to-some-website.com/" },
