--- a/config/_default/menus.it.toml
+++ b/config/_default/menus.it.toml
@@ -26,10 +26,20 @@
   weight = 2
 
 [[main]]
+  name = "Test Menu"
+  weight = 4
+
+[[main]]
+  name = "Test Page"
+  parent = "Test Menu"
+  pageRef = "test"
+  weight = 4
+
+[[main]]
   identifier = "youtube"
   pre = "youtube"
   url = "https://www.youtube.com/@radiostarschannel"
-  weight = 4
+  weight = 5
 
 [[main]]
   identifier = "spotify"
@@ -71,10 +81,10 @@
 #  pageRef = "posts"
 #  weight = 20
 
-#[[subnavigation]]
-#  name = "An interesting topic"
-#  pageRef = "tags/interesting-topic"
-#  weight = 10
+[[subnavigation]]
+  name = "Live"
+  pageRef = "tags/live"
+  weight = 10
 
 #[[subnavigation]]
 #  name = "My Awesome Category"
