Immagini album nella discografia e altri dettagli

--- a/config/_default/menus.it.toml
+++ b/config/_default/menus.it.toml
@@ -10,54 +10,67 @@
 # overridden by providing a weight value. The menu will then be
 # ordered by weight from lowest to highest.
 
+
+[[main]]
+  #name = "Home"
+  pre = "house-solid"
+  pageRef = "/"
+  weight = 9
+
 [[main]]
   name = "Blog"
   pageRef = "posts"
-  weight = 1
+  weight = 10
 
 #[[main]]
 #  name = "Discografia"
 #  pageRef = "discog/discog"
-#  weight = 2
+#  weight = 20
 
 [[main]]
   name = "Discografia"
   pageRef = "discog_dev"
-  weight = 2
+  weight = 20
 
 [[main]]
   name = "Test Menu"
-  weight = 4
+  weight = 40
 
 [[main]]
   name = "Test Page"
   parent = "Test Menu"
   pageRef = "test"
-  weight = 4
+  weight = 40
 
 [[main]]
   identifier = "youtube"
   pre = "youtube"
   url = "https://www.youtube.com/@radiostarschannel"
-  weight = 5
+  weight = 50
 
 [[main]]
   identifier = "spotify"
   pre = "spotify"
   url = "https://open.spotify.com"
-  weight = 5
+  weight = 50
+
+[[main]]
+  identifier = "jamendo"
+  pre = "jamendo"
+  url = "https://www.jamendo.com/artist/339872/the-radiostars"
+  weight = 55
 
 [[main]]
   identifier = "facebook"
   pre = "facebook"
   url = "https://www.facebook.com/profile.php?id=100067201026057"
-  weight = 6
+  weight = 60
 
 [[main]]
   identifier = "flickr"
   pre = "flickr"
   url = "https://www.flickr.com/photos/radiostars/"
-  weight = 6
+  weight = 60
 
 [[main]]
   identifier = "x-twitter"
@@ -84,7 +97,7 @@
 [[subnavigation]]
   name = "Live"
   pageRef = "tags/live"
-  weight = 10
+  weight = 100
 
 #[[subnavigation]]
 #  name = "My Awesome Category"
@@ -100,7 +113,7 @@
 [[main]]
   name = "Tags"
   pageRef = "tags"
-  weight = 3
+  weight = 30
 
 
 # -- Footer Menu --
