--- a/config/_default/languages.it.toml
+++ b/config/_default/languages.it.toml
@@ -11,7 +11,7 @@ title = "The Radiostars"
   dateFormat = "2 Gennaio 2006"
   logo = "img/logo.png"
   # secondaryLogo = "img/secondary-logo.png"
-   description = "My awesome website"
+  # description = "My awesome website"
   # copyright = "Copy, _right?_ :thinking_face:"
 
  [params.author]
@@ -19,7 +19,7 @@ title = "The Radiostars"
    email = "youremail@example.com"
    image = "img/logo.png"
    imageQuality = 96
-   headline = "I'm only human"
+   #headline = "I'm only human"
    #bio = "A little bit about you"
    links = [
 #     { email = "mailto:hello@your_domain.com" },
