--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -5,6 +5,7 @@
 # Refer to the theme docs for more details about each of these parameters.
 # https://blowfish.page/docs/configuration/#theme-parameters
 
+#colorScheme = "c_schema" # schema custom
 colorScheme = "blowfish"
 defaultAppearance = "dark" # valid options: light or dark
 autoSwitchAppearance = false
