--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -7,7 +7,7 @@
 
 #colorScheme = "c_schema" # schema custom
 colorScheme = "blowfish"
-defaultAppearance = "dark" # valid options: light or dark
+defaultAppearance = "light" # valid options: light or dark
 autoSwitchAppearance = false
 
 enableSearch = true
