fix problema data

--- a/config/_default/languages.it.toml
+++ b/config/_default/languages.it.toml
@@ -8,7 +8,7 @@ title = "The Radiostars"
   displayName = "IT"
   isoCode = "it"
   rtl = false
-  dateFormat = "2 Gennaio 2006"
+  dateFormat = "2 Jan 2006"
   logo = "img/logo.png"
   # secondaryLogo = "img/secondary-logo.png"
   # description = "My awesome website"
