Aggiunta intervista di Reporter

--- a/config/_default/menus.it.toml
+++ b/config/_default/menus.it.toml
@@ -33,6 +33,11 @@
   weight = 22
 
 [[main]]
+  name = "Video"
+  pageRef = "tags/Video"
+  weight = 25
+
+[[main]]
   name = "Blog"
   pageRef = "posts"
   weight = 30
